Add tagging support for dataset fields (#675)
* WIP


* Add class service.Tag


* Add dataset field check on tagging


* Add class DatasetDaoTest


* Add DatasetDaoTest.testLastModified


* Force tag uppercase


* More dataset dao tests


* Add class TagDaoTest
