# src/main/java/marquez/api/models/DbTableRequest.java
@@ -29,8 +29,9 @@ public final class DbTableRequest extends DatasetRequest {
       final String physicalName,
       final String sourceName,
       @Nullable final List<Field> fields,
+      @Nullable final List<String> tags,
       @Nullable final String description,
       @Nullable final String runId) {
-    super(physicalName, sourceName, fields, description, runId);
+    super(physicalName, sourceName, fields, tags, description, runId);
   }
 }
