# src/main/java/marquez/db/models/TagRow.java
@@ -15,16 +15,21 @@
 package marquez.db.models;
 
 import java.time.Instant;
+import java.util.Optional;
 import java.util.UUID;
-import lombok.Builder;
-import lombok.Data;
+import javax.annotation.Nullable;
+import lombok.NonNull;
+import lombok.Value;
 
-@Data
-@Builder
-public final class TagRow {
-  private UUID uuid;
-  private Instant createdAt;
-  private Instant updatedAt;
-  private String name;
-  private String description;
+@Value
+public class TagRow {
+  @NonNull UUID uuid;
+  @NonNull Instant createdAt;
+  @NonNull Instant updatedAt;
+  @NonNull String name;
+  @Nullable String description;
+
+  public Optional<String> getDescription() {
+    return Optional.ofNullable(description);
+  }
 }
